# rust-seismic-inversion

./: Cargo.toml
src/: main.rs
src/convolution/: mod.rs
src/forward_modelling/: acoustic.rs  mod.rs
src/models/: mod.rs
src/utils/: mod.rs
src/wavelets/: mod.rs
