[package]
name = "rust_seismic_inversion"
version = "0.1.0"
edition = "2024"

[dependencies]
rustfft="6.2"
ndarray="0.15"
num-complex="0.4"

nalgebra="0.32"
approx="0.5"

serde={ version="1.0", features=["derive"] }
serde_json="1.0"
hdf5="0.8"
csv="1.3"

plotters="0.3"

rayon="1.8"
crossbeam="0.8"

[dev-dependencies]
criterion="0.5"
proptest="1.4"

[profile.release]
opt-level=3
lto=true
codegen-units=1
panic="abort"

[profile.dev]
opt-level=1

