[package]
name="rust-seismic-inversion"
version="0.1.0"
edition="2021"
authors=["Cedric <cedricvictor450@gmail.com>"]
description="A high performance seismic inversion tool implemented in Rust"
license="MIT"
repository="https://github.com/ced-sys/rust-seismic-inversion"

[dependecies]
rustfft="6.1"
num-complex="0.4"
csv="1.3"
anyhow="1.0"
rayon="1.8"

[profile.release]
opt-level=3
lto=true
codegen-units=1
panic="abort"

[profile.dev]
debug=true
opt-level=0